<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    Top Nav-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <!--    Middle-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <!--  Language -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_language"
                android:drawableRight="@drawable/ic_bigger"
                android:gravity="left|center"
                android:text="@string/language"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <!--        Privacy Policy Layout-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_policy"
                android:drawableRight="@drawable/ic_bigger"
                android:gravity="left|center"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <!--        Customer Support Layout-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_customer_support"
                android:drawableRight="@drawable/ic_bigger"
                android:gravity="left|center"
                android:text="@string/customer_support"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <!--        Settings layout-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_setting"
                android:drawableRight="@drawable/ic_bigger"
                android:gravity="left|center"
                android:text="@string/setting"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_weight="1" />-->

    <!--    end -->

</LinearLayout>